syntax = "proto3";
option java_multiple_files = true;
package kpi.trspo.restapp;

message MyUuid {
  string value = 1;
}